kubernetes-ingress-controller-demo/app-wear/app-wear-app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-wear-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-wear
  template:
    metadata:
      labels:
        app: app-wear
    spec:
      containers:
      - name: app-wear-app
        image: app-wear-app:latest
        ports:
        - containerPort: 3000
