kubernetes-ingress-controller-demo/app-wear/app-wear-app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-wear-service
  labels:
    app: app-wear
spec:
  type: NodePort
  selector:
    app: app-wear
  ports:
    - protocol: TCP
      port: 80          # Service port (cluster-internal)
      targetPort: 3000  # Container port (default Next.js port)
      nodePort: 31000   # External port (30000-32767 range)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-wear-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-wear
  template:
    metadata:
      labels:
        app: app-wear
    spec:
      containers:
      - name: app-wear-app
        image: 192.168.0.47:5000/app-wear-app:1.0.0
        imagePullPolicy: Always  # Important for development
        ports:
        - containerPort: 3000
