kubernetes-ingress-controller-demo/app-wear/nginx-ingress-controller.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.10.1
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80          # Service port (cluster-internal)
      targetPort: 80    # Container port (nginx)
      name: http
    - protocol: TCP
      port: 443         # Service port (cluster-internal)
      targetPort: 443   # Container port (nginx)
      name: https
  selector:
    name: nginx-ingress
