kubernetes-ingress-controller-demo/app-wear/app-wear.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-wear
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: appwear.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-wear-service
                port:
                  number: 80
    - host: appwatch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-watch-service
                port:
                  number: 80
